study: play with volumes

--- a/logs-app/Makefile
+++ b/logs-app/Makefile
@@ -1,4 +1,4 @@
 run: 
-	docker run -d -p 80:4200 -v logs:/app/data --rm --name volume_container logsapp:volumes 
+	docker run -d -p 80:4200 -v logs:/app/data --rm --name volume_container logsapp_image_volume
 stop: 
 	docker stop volume_container
